fixed button overlap

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -15,6 +15,7 @@
 }
 
 .nav-menu {
+  z-index: 1;
   background-color: #060b26;
   width: 250px;
   height: 100vh;
